--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -125,7 +125,7 @@ autotiler_add_model(
   MODEL_TENSORS_DIR ${NN_AT_TENSORS_DIR}
   MODEL_BUILDDIR ${NN_DIR}
   PRI1_USED TRUE
-  PRI1_FLASH mram
+  PRI1_FLASH flash
   L1_MEMORY ${CONFIG_MODEL_L1_MEMORY}
   L2_MEMORY ${CONFIG_MODEL_L2_MEMORY}
   L3_MEMORY ${CONFIG_MODEL_L3_MEMORY}
