--- a/sdk.config
+++ b/sdk.config
@@ -3,17 +3,7 @@ CONFIG_BOARD_GAP9MOD_V1_0_B=y
 CONFIG_BOARD_GAP9EVK_V1_3=y
 CONFIG_BOARD_AUDIO_ADDON_V2_1=y
 CONFIG_BOARD_AUDIO_ADDON_V2_1_OPTION_SSM6515_PDM=y
-CONFIG_PLATFORM_BOARD=n
-CONFIG_DRIVER_I2C=y
-CONFIG_DRIVER_I2S=y
-
-CONFIG_DRIVER_TYPE_RAM=y
-CONFIG_DRIVER_MX25U51245G=y
-CONFIG_DRIVER_MX25U51245G_BAUDRATE_DEFAULT=y
-
-CONFIG_DRIVER_TYPE_FLASH=y
-CONFIG_DRIVER_HOSTFS=y
-CONFIG_DRIVER_READFS=y
+CONFIG_PLATFORM_BOARD=y
 
 CONFIG_OPENOCD_SCRIPT_DEFAULT=y
 CONFIG_BOOT_DEVICE_JTAG=y
@@ -21,7 +11,6 @@ CONFIG_IO_TYPE_UART=y
 CONFIG_IO_UART_ITF_1=y
 CONFIG_IO_UART_ITF=1
 CONFIG_IO_UART_BAUDRATE=115200
-CONFIG_DRIVER_ADS1014=y
 
 # Autotiler Settings
 CONFIG_ENABLE_AUTOTILER=y
@@ -30,20 +19,37 @@ CONFIG_CNN_POW2=n
 CONFIG_CNN_FP16=y
 CONFIG_CNN_NE16=y
 CONFIG_MODEL_HAS_NO_CONSTANTS=n
-CONFIG_MODEL_FLASH_TYPE_MRAM=y
-CONFIG_MODEL_RAM_TYPE_DEFAULT=y
 CONFIG_MODEL_EMUL=n
 CONFIG_DRIVER_CLUSTERDECOMPRESSOR=n
-CONFIG_MODEL_L2_MEMORY=1300000
+CONFIG_MODEL_FLASH_TYPE_DEFAULT=y
+CONFIG_MODEL_RAM_TYPE_DEFAULT=y
+
+# Memory sizes for cluster L1, SoC L2 and Flash
+CONFIG_MODEL_L1_MEMORY=128000
+CONFIG_MODEL_L2_MEMORY=1200000
+CONFIG_MODEL_L3_MEMORY=8000000
+CONFIG_MODEL_LOGLEVEL=2
+CONFIG_MODEL_L2STATIC_MEMORY=-1
+CONFIG_MODEL_L3STATIC_MEMORY=-1
+
 
 CONFIG_LIB_GAP_LIB=y
 CONFIG_LIB_GAP_LIB_WAV_IO=y
 
 #Drivers
 CONFIG_DRIVER_SSM6515=y
-CONFIG_DRIVER_TYPE_FLASH=y
-CONFIG_DRIVER_MX25U51245G=y
 CONFIG_DRIVER_T3902=y
+CONFIG_DRIVER_ADS1014=y
+CONFIG_DRIVER_I2C=y
+CONFIG_DRIVER_I2S=y
+CONFIG_DRIVER_TYPE_RAM=y
+CONFIG_DRIVER_MX25U51245G=y
+CONFIG_DRIVER_MX25U51245G_BAUDRATE_DEFAULT=y
+CONFIG_DRIVER_TYPE_FLASH=y
+CONFIG_DRIVER_HOSTFS=y
+CONFIG_DRIVER_READFS=y
+CONFIG_DRIVER_LITTLEFS=y
+CONFIG_DRIVER_VFS=y
 
 CONFIG_LIB_SFU=y
 CONFIG_LIB_SFU_V2=y
