Added mixed precision capability (ok in wav)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -77,13 +77,23 @@ message(STATUS "${APP_MSG_PREFIX} Using ${TRAINED_ONNX} model")
 
 if (CONFIG_FP16MIXED)
   set(QUANT_TYPE "mixedfp16")
-  set(QUANT_FLAG -DFLOAT_NN_INOUT)
+  list(APPEND QUANT_FLAG -DNN_TYPE=f16)
+  list(APPEND QUANT_FLAG -DRNN_TYPE=int8_t)
+  list(APPEND QUANT_FLAG -DZERO=0)
 elseif(CONFIG_FP16)
   set(QUANT_TYPE "fp16")
-  set(QUANT_FLAG -DFLOAT_NN_INOUT)
-elseif(CONFIG_NE16)
-  set(QUANT_TYPE "ne16")
+  list(APPEND QUANT_FLAG -DNN_TYPE=f16)
+  list(APPEND QUANT_FLAG -DRNN_TYPE=f16)
+  list(APPEND QUANT_FLAG -DZERO=0)
+elseif(CONFIG_FP16NE16MIXED)
+  set(QUANT_TYPE "mixedne16fp16")
+  list(APPEND QUANT_FLAG -DNN_TYPE=f16)
+  list(APPEND QUANT_FLAG -DRNN_TYPE=uint8_t)
+  list(APPEND QUANT_FLAG -DZERO=128)
+else()
+  message(ERROR "${APP_MSG_PREFIX} You need to provide a valid quant type")
 endif()
+list(APPEND QUANT_FLAG -DSTFT_TYPE=float)
 
 ###############################################################################
 # FFT Pre/post processing code gen
