wordkaround for noise

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,15 +60,15 @@ else()
   set(FLASH_TYPE mram)
 endif()
 
-if (${CONFIG_MODEL_DNS})
+# if (${CONFIG_MODEL_DNS})
 set(TRAINED_ONNX      ${CMAKE_CURRENT_SOURCE_DIR}/model/denoiser_dns.onnx)
+# set(GRU_FLAG -DGRU)
+# elseif (${CONFIG_MODEL_LSTM})
+# set(TRAINED_ONNX      ${CMAKE_CURRENT_SOURCE_DIR}/model/denoiser.onnx)
+# else()
+# set(TRAINED_ONNX      ${CMAKE_CURRENT_SOURCE_DIR}/model/denoiser_GRU.onnx)
 set(GRU_FLAG -DGRU)
-elseif (${CONFIG_MODEL_LSTM})
-set(TRAINED_ONNX      ${CMAKE_CURRENT_SOURCE_DIR}/model/denoiser.onnx)
-else()
-set(TRAINED_ONNX      ${CMAKE_CURRENT_SOURCE_DIR}/model/denoiser_GRU.onnx)
-set(GRU_FLAG -DGRU)
-endif()
+# endif()
 message(STATUS "${APP_MSG_PREFIX} Using ${TRAINED_ONNX} model")
 
 ###############################################################################
@@ -93,7 +93,7 @@ elseif(CONFIG_FP16NE16MIXED)
 else()
   message(ERROR "${APP_MSG_PREFIX} You need to provide a valid quant type")
 endif()
-list(APPEND QUANT_FLAG -DSTFT_TYPE=float)
+list(APPEND QUANT_FLAG -DSTFT_TYPE=float16)
 
 ###############################################################################
 # FFT Pre/post processing code gen
@@ -174,7 +174,7 @@ add_custom_command(
               --n_fft=${FRAME_NFFT}
               --frame_size=${FRAME_SIZE}
               --frame_step=${FRAME_STEP}
-              --window_type="hann"
+              --window_type="hanning"
               --forward_at_model_path=${FFT_FORWARD_AT_MODEL_PATH}
               --forward_tensors_dir=${FFT_FORWARD_AT_TENSORS_DIR}
               --inverse_at_model_path=${FFT_INVERSE_AT_MODEL_PATH}
