Corrected clicking at the end of NNTool evaluation and run accuracy tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -77,6 +77,21 @@ elseif(${CONFIG_NEW_LSTM_DNS})
 elseif(${CONFIG_NEW_GRU_DNS_TT_RANK_2})
   set(TRAINED_ONNX      ${CMAKE_CURRENT_SOURCE_DIR}/model/tensor_train/tt_denoiser_rank_2.onnx)
   set(TT_FLAG -DTT)
+elseif(${CONFIG_NEW_GRU_DNS_TT_RANK_4})
+  set(TRAINED_ONNX      ${CMAKE_CURRENT_SOURCE_DIR}/model/tensor_train/tt_denoiser_rank_4.onnx)
+  set(TT_FLAG -DTT)
+elseif(${CONFIG_NEW_GRU_DNS_TT_RANK_8})
+  set(TRAINED_ONNX      ${CMAKE_CURRENT_SOURCE_DIR}/model/tensor_train/tt_denoiser_rank_8.onnx)
+  set(TT_FLAG -DTT)
+elseif(${CONFIG_NEW_GRU_DNS_TT_RANK_16})
+  set(TRAINED_ONNX      ${CMAKE_CURRENT_SOURCE_DIR}/model/tensor_train/tt_denoiser_rank_16.onnx)
+  set(TT_FLAG -DTT)
+elseif(${CONFIG_NEW_GRU_DNS_TT_RANK_48})
+  set(TRAINED_ONNX      ${CMAKE_CURRENT_SOURCE_DIR}/model/tensor_train/tt_denoiser_rank_48.onnx)
+  set(TT_FLAG -DTT)
+elseif(${CONFIG_NEW_GRU_DNS_TT_RANK_80})
+  set(TRAINED_ONNX      ${CMAKE_CURRENT_SOURCE_DIR}/model/tensor_train/tt_denoiser_rank_80.onnx)
+  set(TT_FLAG -DTT)
 else()
   message(ERROR "${APP_MSG_PREFIX} Model selection went wrong!")
 endif()
