Added FULL Rank used for TT and mixed precisions

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -74,24 +74,29 @@ elseif(${CONFIG_NEW_LSTM_DNS})
   elseif(${CONFIG_NEW_GRU_DNS})
   set(TRAINED_ONNX      ${CMAKE_CURRENT_SOURCE_DIR}/model/FullRankGRU.onnx)
   set(GRU_FLAG -DGRU)
-elseif(${CONFIG_NEW_GRU_DNS_TT_RANK_2})
+elseif(${CONFIG_NEW_LSTM_DNS_TT_RANK_2})
   set(TRAINED_ONNX      ${CMAKE_CURRENT_SOURCE_DIR}/model/tensor_train/tt_denoiser_rank_2.onnx)
   set(TT_FLAG -DTT)
-elseif(${CONFIG_NEW_GRU_DNS_TT_RANK_4})
+elseif(${CONFIG_NEW_LSTM_DNS_TT_RANK_4})
   set(TRAINED_ONNX      ${CMAKE_CURRENT_SOURCE_DIR}/model/tensor_train/tt_denoiser_rank_4.onnx)
   set(TT_FLAG -DTT)
-elseif(${CONFIG_NEW_GRU_DNS_TT_RANK_8})
+elseif(${CONFIG_NEW_LSTM_DNS_TT_RANK_8})
   set(TRAINED_ONNX      ${CMAKE_CURRENT_SOURCE_DIR}/model/tensor_train/tt_denoiser_rank_8.onnx)
   set(TT_FLAG -DTT)
-elseif(${CONFIG_NEW_GRU_DNS_TT_RANK_16})
+elseif(${CONFIG_NEW_LSTM_DNS_TT_RANK_16})
   set(TRAINED_ONNX      ${CMAKE_CURRENT_SOURCE_DIR}/model/tensor_train/tt_denoiser_rank_16.onnx)
   set(TT_FLAG -DTT)
-elseif(${CONFIG_NEW_GRU_DNS_TT_RANK_48})
+elseif(${CONFIG_NEW_LSTM_DNS_TT_RANK_48})
   set(TRAINED_ONNX      ${CMAKE_CURRENT_SOURCE_DIR}/model/tensor_train/tt_denoiser_rank_48.onnx)
   set(TT_FLAG -DTT)
-elseif(${CONFIG_NEW_GRU_DNS_TT_RANK_80})
+elseif(${CONFIG_NEW_LSTM_DNS_TT_RANK_80})
   set(TRAINED_ONNX      ${CMAKE_CURRENT_SOURCE_DIR}/model/tensor_train/tt_denoiser_rank_80.onnx)
   set(TT_FLAG -DTT)
+elseif(${CONFIG_NEW_LSTM_DNS_TT_FULL_RANK})
+  set(TRAINED_ONNX      ${CMAKE_CURRENT_SOURCE_DIR}/model/tensor_train/tt_TinyDenoiser_FullRankLSTM.onnx)
+  set(TT_FLAG -DTT)
+  set(TT_FULL_FLAG -DTT_FULL_RANK)
+  set(NNTOOL_TT_FLAG --tensor_train)
 else()
   message(ERROR "${APP_MSG_PREFIX} Model selection went wrong!")
 endif()
@@ -105,17 +110,20 @@ message(STATUS "${APP_MSG_PREFIX} Using ${TRAINED_ONNX} model")
 if (CONFIG_FP16MIXED)
   set(QUANT_TYPE "mixedfp16")
   list(APPEND QUANT_FLAG -DNN_TYPE=f16)
-  list(APPEND QUANT_FLAG -DRNN_TYPE=int8_t)
+  list(APPEND QUANT_FLAG -DRNN_TYPE_H=int8_t)
+  list(APPEND QUANT_FLAG -DRNN_TYPE_C=int8_t)
   list(APPEND QUANT_FLAG -DZERO=0)
 elseif(CONFIG_FP16)
   set(QUANT_TYPE "fp16")
   list(APPEND QUANT_FLAG -DNN_TYPE=f16)
-  list(APPEND QUANT_FLAG -DRNN_TYPE=f16)
+  list(APPEND QUANT_FLAG -DRNN_TYPE_H=f16)
+  list(APPEND QUANT_FLAG -DRNN_TYPE_C=f16)
   list(APPEND QUANT_FLAG -DZERO=0)
 elseif(CONFIG_FP16NE16MIXED)
   set(QUANT_TYPE "mixedne16fp16")
   list(APPEND QUANT_FLAG -DNN_TYPE=f16)
-  list(APPEND QUANT_FLAG -DRNN_TYPE=uint8_t)
+  list(APPEND QUANT_FLAG -DRNN_TYPE_H=uint8_t)
+  list(APPEND QUANT_FLAG -DRNN_TYPE_C=int16_t)
   list(APPEND QUANT_FLAG -DZERO=128)
 else()
   message(ERROR "${APP_MSG_PREFIX} You need to provide a valid quant type")
@@ -224,6 +232,7 @@ add_custom_command(
                                       --at_model_path=${NN_AT_MODEL_PATH}
                                       --tensors_dir=${NN_AT_TENSORS_DIR}
                                       --flash_type=${FLASH_TYPE}
+                                      ${NNTOOL_TT_FLAG}
 )
 add_custom_target(clean_nn_model
   COMMENT "clean_nn_model: removing ${COMMON_MODEL_BUILDDIR}/${MODEL_GEN}"
@@ -298,6 +307,7 @@ list(APPEND TARGET_PREPROCESSOR -DPERF
                                 ${QUANT_FLAG}
                                 ${GRU_FLAG}
                                 ${TT_FLAG}
+                                ${TT_FULL_FLAG}
 )
 
 project(${TARGET_NAME} C ASM)
