--- a/Kconfig
+++ b/Kconfig
@@ -69,7 +69,6 @@ menu "DENOISER APP menu"
     choice MODEL_TYPE
         prompt  "Select Model"
         default GRU_DNS 
-
         config GRU_DNS
             bool "GRU trained on DNS"
         config GRU_VALENTINI
@@ -80,18 +79,20 @@ menu "DENOISER APP menu"
             bool "New LSTM trained on DNS"
         config NEW_GRU_DNS
             bool "New GRU trained on DNS"
-        config NEW_GRU_DNS_TT_RANK_2
-            bool "New GRU trained on DNS with Tensor Train Rank Reduction to rank 2"
-        config NEW_GRU_DNS_TT_RANK_4
-            bool "New GRU trained on DNS with Tensor Train Rank Reduction to rank 4"
-        config NEW_GRU_DNS_TT_RANK_8
-            bool "New GRU trained on DNS with Tensor Train Rank Reduction to rank 8"
-        config NEW_GRU_DNS_TT_RANK_16
-            bool "New GRU trained on DNS with Tensor Train Rank Reduction to rank 16"
-        config NEW_GRU_DNS_TT_RANK_48
-            bool "New GRU trained on DNS with Tensor Train Rank Reduction to rank 48"
-        config NEW_GRU_DNS_TT_RANK_80
-            bool "New GRU trained on DNS with Tensor Train Rank Reduction to rank 80"
+        config NEW_LSTM_DNS_TT_RANK_2
+            bool "New LSTM trained on DNS with Tensor Train Rank Reduction to rank 2"
+        config NEW_LSTM_DNS_TT_RANK_4
+            bool "New LSTM trained on DNS with Tensor Train Rank Reduction to rank 4"
+        config NEW_LSTM_DNS_TT_RANK_8
+            bool "New LSTM trained on DNS with Tensor Train Rank Reduction to rank 8"
+        config NEW_LSTM_DNS_TT_RANK_16
+            bool "New LSTM trained on DNS with Tensor Train Rank Reduction to rank 16"
+        config NEW_LSTM_DNS_TT_RANK_48
+            bool "New LSTM trained on DNS with Tensor Train Rank Reduction to rank 48"
+        config NEW_LSTM_DNS_TT_RANK_80
+            bool "New LSTM trained on DNS with Tensor Train Rank Reduction to rank 80"
+        config NEW_LSTM_DNS_TT_FULL_RANK
+            bool "New LSTM trained on DNS with Tensor Train Full Rank"
     endchoice
 
 endmenu
