--- a/Kconfig
+++ b/Kconfig
@@ -76,10 +76,6 @@ menu "DENOISER APP menu"
             bool "GRU trained on Valentini (model/denoiser_GRU_Valentini.onnx)"
         config LSTM_VALENTINI
             bool "LSTM trained on Valentini (model/denoiser_LSTM_Valentini.onnx)"
-        config NEW_LSTM_DNS
-            bool "New LSTM trained on DNS (model/FullRankLSTM.onnx)"
-        config NEW_GRU_DNS
-            bool "New GRU trained on DNS (model/FullRankGRU.onnx)"
         config NEW_LSTM_DNS_TT_RANK_2
             bool "New LSTM trained on DNS with Tensor Train Rank Reduction to rank 2 (model/tensor_train/tt_denoiser_rank_2.onnx)"
         config NEW_LSTM_DNS_TT_RANK_4
@@ -92,6 +88,9 @@ menu "DENOISER APP menu"
             bool "New LSTM trained on DNS with Tensor Train Rank Reduction to rank 48 (model/tensor_train/tt_denoiser_rank_48.onnx)"
         config NEW_LSTM_DNS_TT_RANK_80
             bool "New LSTM trained on DNS with Tensor Train Rank Reduction to rank 80 (model/tensor_train/tt_denoiser_rank_80.onnx)"
+        config NEW_LSTM_DNS_TT_FULL_RANK
+            bool "New LSTM trained on DNS with Tensor Train Rank Reduction to rank 80 (model/tensor_train/tt_TinyDenoiser_FullRankLSTM.onnx)"
+            
     endchoice
 
 endmenu
