Fixed gvcontrol bugs

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,16 +39,18 @@ include($ENV{GAP_SDK_HOME}/utils/cmake/setup.cmake)
 
 set(TARGET_NAME         "denoiser")
 set(APP_MSG_PREFIX "[${BoldRed}${TARGET_NAME}${ColourReset}]")
+set(WAV_FILE  ${CMAKE_CURRENT_SOURCE_DIR}/dataset/test/noisy/${CONFIG_WAV_FILE_TO_DENOISE})
 
 if (${CONFIG_DEMO})
+  message(STATUS "${APP_MSG_PREFIX} DEMO Mode on")
   set(MAIN              ${CMAKE_CURRENT_SOURCE_DIR}/main_demo.c)
 elseif(${CONFIG_DENOISE_WAV})
+  message(STATUS "${APP_MSG_PREFIX} DENOISE WAV Mode: denoising ${WAV_FILE}")
   set(MAIN              ${CMAKE_CURRENT_SOURCE_DIR}/main_wav.c)
 else()
   message(ERROR "${APP_MSG_PREFIX} No demo mode chosen")
 endif()
 
-set(WAV_FILE  ${CMAKE_CURRENT_SOURCE_DIR}/dataset/test/noisy/p232_050.wav)
 
 set(FFT_NNTOOL_SCRIPT ${CMAKE_CURRENT_SOURCE_DIR}/nntool_scripts/fft_nntool_script.py)
 set(NN_NNTOOL_SCRIPT  ${CMAKE_CURRENT_SOURCE_DIR}/nntool_scripts/nn_nntool_script.py)
@@ -57,6 +59,7 @@ set(QUANT_DATASET     ${CMAKE_CURRENT_SOURCE_DIR}/dataset/quant/*)
 if (${CONFIG_MODEL_FLASH_TYPE_DEFAULT})
   set(FLASH_TYPE flash)
 else()
+  message(STATUS "${APP_MSG_PREFIX} Using MRAM")
   set(FLASH_TYPE mram)
 endif()
 
@@ -102,18 +105,21 @@ message(STATUS "${APP_MSG_PREFIX} Using ${TRAINED_ONNX} model")
 ###############################################################################
 
 if (CONFIG_FP16MIXED)
+  message(STATUS "${APP_MSG_PREFIX} Using Mixed FP16 quantization")
   set(QUANT_TYPE "mixedfp16")
   list(APPEND QUANT_FLAG -DNN_TYPE=f16)
   list(APPEND QUANT_FLAG -DRNN_TYPE_H=int8_t)
   list(APPEND QUANT_FLAG -DRNN_TYPE_C=int8_t)
   list(APPEND QUANT_FLAG -DZERO=0)
 elseif(CONFIG_FP16)
+  message(STATUS "${APP_MSG_PREFIX} Using FP16 quantization")
   set(QUANT_TYPE "fp16")
   list(APPEND QUANT_FLAG -DNN_TYPE=f16)
   list(APPEND QUANT_FLAG -DRNN_TYPE_H=f16)
   list(APPEND QUANT_FLAG -DRNN_TYPE_C=f16)
   list(APPEND QUANT_FLAG -DZERO=0)
 elseif(CONFIG_FP16NE16MIXED)
+  message(STATUS "${APP_MSG_PREFIX} Using Mixed FP16-NE16 quantization")
   set(QUANT_TYPE "mixedne16fp16")
   list(APPEND QUANT_FLAG -DNN_TYPE=f16)
   list(APPEND QUANT_FLAG -DRNN_TYPE_H=uint8_t)
