Added scripts for testing

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -118,6 +118,13 @@ elseif(CONFIG_FP16)
   list(APPEND QUANT_FLAG -DRNN_TYPE_H=f16)
   list(APPEND QUANT_FLAG -DRNN_TYPE_C=f16)
   list(APPEND QUANT_FLAG -DZERO=0)
+elseif(CONFIG_BFP16)
+  message(STATUS "${APP_MSG_PREFIX} Using BFP16 quantization")
+  set(QUANT_TYPE "bfp16")
+  list(APPEND QUANT_FLAG -DNN_TYPE=f16a)
+  list(APPEND QUANT_FLAG -DRNN_TYPE_H=f16a)
+  list(APPEND QUANT_FLAG -DRNN_TYPE_C=f16a)
+  list(APPEND QUANT_FLAG -DZERO=0)
 elseif(CONFIG_FP16NE16MIXED)
   message(STATUS "${APP_MSG_PREFIX} Using Mixed FP16-NE16 quantization")
   set(QUANT_TYPE "mixedne16fp16")
